fix header menu items positioning and overflow add menu to form

--- a/styles/blocks/header.css
+++ b/styles/blocks/header.css
@@ -9,6 +9,6 @@
 
 @media (min-width: 768px) {
     .header {
-        position: static;
+        /* position: static; */
     }
 }
